--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JS - Katas 03</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <h1>
+        Resolução Katas 03 - JS
+    </h1>
+    <div id="katas">
+
+    </div>
+
+    <h1>Resolução katas bônus</h1>
+    <div id="box">
+
+    </div>
+
     <script src="katas3.js"></script>
 </body>
 </html>
